cmake_minimum_required(VERSION 3.27)
project(Code_With_Mosh)

set(CMAKE_CXX_STANDARD 23)

add_executable(Code_With_Mosh main.cpp
        ../tax-rate/tax-rate.cpp
        ../iomanip/iomanip.cpp
        ../iomanip/iomanip.cpp
        ../iomanip/iiiomanip.cpp
        ../iomanip/iiiomanip.cpp
        ../iomanip/iiiomanip.cpp
        ../iomanip/iiiomanip.cpp)
